--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="js/app.js"></script>
 
 <body ng-controller="formCtrl">
+	<h1>Sign Up</h1>
+	<h2>Our service is fun and awesome, but you must be 13 to join.</h2>
 
 <form>
 	<input type="text" ng-model="email" name="email" placeholder="Email...">
