--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <!-- include libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="js/moment.js"></script>
     <script src="js/app.js"></script>
 
 <body ng-controller="formCtrl">
@@ -36,17 +37,15 @@
 		<div class="form-group" ng-class="{'has-error':userForm.lastName.$invalid && userForm.lastName.$touched}">
 		<label for="lastName">Last Name:</label>
 		<input type="text" ng-model="lastName" class="form-control" name="lastName" placeholder="Last Name..." required>
-		<div role="alert">
-            <span class="error" ng-show="userForm.lastName.$invalid && userForm.lastName.$touched" class="help-block">We need to know your last name!</span>
-            <br>
-        </div>
+        <p class="error errorLN" ng-show="userForm.lastName.$invalid && userForm.lastName.$touched" class="help-block">We need to know your last name!</p>
+         </div>
 
+        
         <div class="form-group" ng-class="{'has-error': userForm.birthday.$invalid && userForm.birthday.$touched}">
 		<label for="birthday">Birthday:</label>
-		<input type="date" class="form-control" ng-model="birthday" name="birthday" placeholder="Birthday..." max="2002-11-14" required>
-		<div role="alert">
-            <span class="error" ng-show="userForm.birthday.$invalid && userForm.birthday.$touched" class="help-block">Sorry, you must be at least 13 to sign up!</span>
-            <br>
+		<input type="text" class="form-control" ng-model="birthday" name="birthday" placeholder="Birthday...(MM-DD-YYYY)" id="birthday" onkeyup="checkBirth(); return false;" required>
+		<span id="validAge" class="validAge"></span>
+        <p class="error" ng-show="userForm.birthday.$invalid && userForm.birthday.$touched" class="help-block">Birthday is required.</p>
         </div>
 
 		<!--PASSWORD VALIDATION-->
