--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!--EMAIL ADDRESS VALIDATION-->
 		<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine || userForm.email.$touched}" >
 			<label class="email">Email</label>
-			<input type="email" id="emailField" name="email" class="form-control" ng-model="user.email" required>
+			<input type="email" id="emailField" name="email" placeholder="Email..." class="form-control" ng-model="user.email" required>
 
 			<p ng-show="userForm.email.$error.email && !userForm.email.$pristine"  class="help-block">Enter a valid email.</p>
 			<p ng-show="userForm.email.$error.required && userForm.email.$touched"  class="help-block">We need to know your email!</p>
@@ -51,14 +51,14 @@
 		<!--PASSWORD VALIDATION-->
 		<div class="form-group" ng-class="{'has-error' :userForm.password.$invalid && userForm.password.$touched}">
 			<label for="password">Password:</label>
-			<input type="password" name="password" class="form-control" ng-model="user.password" id="password" required>
+			<input type="password" name="password" placeholder="Password..." class="form-control" ng-model="user.password" id="password" required>
 			<p ng-show="userForm.password.$invalid && userForm.password.$touched" class="help-block">Password is required.</p>
 
 
 		</div>
 		<div class="form-group" ng-class="{'has-error' :userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched}">
 			<label for="confirmPassword">Confirm Password:</label>
-			<input type="password" name="confirmPassword" class="form-control" ng-model="user.confirmPassword" id="confirmPassword" onkeyup="checkPass(); return false;" required>
+			<input type="password" name="confirmPassword" placeholder="Confirm Password..." class="form-control" ng-model="user.confirmPassword" id="confirmPassword" onkeyup="checkPass(); return false;" required>
 			<span id="confirmMessage" class="confirmMessage"></span>
 			<p ng-show="userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched" class="help-block">Password is required.</p>
 
