--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 		</div>
 		<div class="form-group" ng-class="{'has-error' :userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched}">
 			<label for="confirmPassword">Confirm Password:</label>
-			<input type="password" name="confirmPassword" placeholder="Confirm Password..." class="form-control" ng-model="user.confirmPassword" id="confirmPassword" onkeyup="checkPass(); return false;" required>
-			<span id="confirmMessage" class="confirmMessage"></span>
+			<input type="password" name="confirmPassword" placeholder="Confirm Password..." class="form-control" ng-model="user.confirmPassword" id="confirmPassword" ng-change="checkPass()" required>
+
+
+			<p class="help-block" ng-if="showPasswordsDoNotMatch">Passwords do not match.</p>
 			<p ng-show="userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched" class="help-block">Password is required.</p>
 
 		</div>
