--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		<p class="title">Sign Up</h1>
 		<p class="slogan">Our service is fun and awesome, but you must be 13 to join.</h2>
 		<!--EMAIL ADDRESS VALIDATION-->
-		<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine || userForm.email.$touched}" >
+		<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && (!userForm.email.$pristine || userForm.email.$touched)}" >
 			<label class="email">Email</label>
 			<input type="email" id="emailField" name="email" class="form-control" ng-model="user.email" required>
 
-			<p ng-show="userForm.email.$error.email && !userForm.email.$pristine"  class="help-block">Enter a valid email.</p>
-			<p ng-show="userForm.email.$error.required && userForm.email.$touched"  class="help-block">We need to know your email!</p>
+			<p ng-show="userForm.email.$error.email && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+			<p ng-show="userForm.email.$error.required && userForm.email.$touched" class="help-block">We need to know your email!</p>
 
 		</div>
 
