--- a/index.html
+++ b/index.html
@@ -36,16 +36,19 @@
 		<!--LAST NAME VALIDATION -->
 		<div class="form-group" ng-class="{'has-error':userForm.lastName.$invalid && userForm.lastName.$touched}">
 		<label for="lastName">Last Name:</label>
-		<input type="text" ng-model="lastName" class="form-control" name="lastName" placeholder="Last Name..." required>
-        <p class="error errorLN" ng-show="userForm.lastName.$invalid && userForm.lastName.$touched" class="help-block">We need to know your last name!</p>
+		<input type="text" ng-model="lastName" id="lastName" class="form-control lastName" name="lastName" placeholder="Last Name..." required>
+        <!-- <p class="error errorLN" id="name-error"ng-show="userForm.lastName.$invalid && userForm.lastName.$touched" class="help-block">We need to know your last name!</p> -->
+        <p ng-show="userForm.lastName.$error.required && userForm.lastName.$touched" class="help-block errorLN">We need to know your last name!</p>
          </div>
 
         
         <div class="form-group" ng-class="{'has-error': userForm.birthday.$invalid && userForm.birthday.$touched}">
 		<label for="birthday">Birthday:</label>
-		<input type="text" class="form-control" ng-model="birthday" name="birthday" placeholder="Birthday...(MM-DD-YYYY)" id="birthday" onkeyup="checkBirth(); return false;" required>
-		<span id="validAge" class="validAge"></span>
-        <p class="error" ng-show="userForm.birthday.$invalid && userForm.birthday.$touched" class="help-block">Birthday is required.</p>
+		<input type="text" class="form-control" ng-model="birthday" name="birthday" placeholder="Birthday...(MM-DD-YYYY)" id="birthday" ng-keyup="checkBirth()" required>
+		<!-- <span id="validAge" class="validAge"></span> -->
+        <!-- <p class="error" ng-show="userForm.birthday.$invalid && userForm.birthday.$touched" class="help-block">Birthday is required.</p> -->
+        <p ng-show="userForm.birthday.$error.required && userForm.birthday.$touched" class="help-block enterBirth">Birthday is required.</p>
+        <p ng-show="userForm.birthday.$error.tooyoung" class="help-block validAge">Sorry, you must be at least 13 to sign up!</p>
         </div>
 
 		<!--PASSWORD VALIDATION-->
