--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="formSubmission">
 <head>
-	<title>Our cool website</title>
+	<title>Sign Up for our Service</title>
 </head>
 
 <!-- bootstrap -->
