--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<label class="email">Email</label>
 			<input type="email" id="emailField" name="email" placeholder="Email..." class="form-control" ng-model="user.email" required>
 
-			<p ng-show="userForm.email.$error.email && !userForm.email.$pristine"  class="help-block">Enter a valid email.</p>
-			<p ng-show="userForm.email.$error.required && userForm.email.$touched"  class="help-block">We need to know your email!</p>
+			<p ng-show="userForm.email.$error.email && !userForm.email.$pristine"  class="help-block errorEmail">Enter a valid email.</p>
+			<p ng-show="userForm.email.$error.required && userForm.email.$touched"  class="help-block enterEmail">We need to know your email!</p>
 
 		</div>
 
@@ -55,7 +55,7 @@
 		<div class="form-group" ng-class="{'has-error' :userForm.password.$invalid && userForm.password.$touched}">
 			<label for="password">Password:</label>
 			<input type="password" name="password" placeholder="Password..." class="form-control" ng-model="user.password" id="password" required>
-			<p ng-show="userForm.password.$invalid && userForm.password.$touched" class="help-block">Password is required.</p>
+			<p ng-show="userForm.password.$invalid && userForm.password.$touched" class="help-block enterPassword">Password is required.</p>
 
 
 		</div>
@@ -64,8 +64,8 @@
 			<input type="password" name="confirmPassword" placeholder="Confirm Password..." class="form-control" ng-model="user.confirmPassword" id="confirmPassword" ng-change="checkPass()" required>
 
 
-			<p class="help-block" ng-if="showPasswordsDoNotMatch">Passwords do not match.</p>
-			<p ng-show="userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched" class="help-block">Password is required.</p>
+			<p ng-show="showPasswordsDoNotMatch" class="help-block passwordMatch">Passwords do not match.</p>
+			<p ng-show="userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched" class="help-block enterConfirmPassword">Password is required.</p>
 
 		</div>
 
