--- a/index.html
+++ b/index.html
@@ -1,80 +1,78 @@
 <!DOCTYPE HTML>
 <html ng-app="formSubmission">
-<head>
-	<title>Our cool website</title>
-</head>
+	<head>
+		<title>Our cool website</title>
+	</head>
 
-<!-- bootstrap -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+	<!-- bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-<!-- include libraries -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script src="js/moment.js"></script>
-    <script src="js/app.js"></script>
+	<!-- include libraries -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="js/moment.js"></script>
+	<script src="js/app.js"></script>
 
-<body ng-controller="formCtrl">
+	<body ng-controller="formCtrl">
 
+		<form name="userForm" ng-submit="submitForm()" action="..." onsubmit="return checkForm(this);" novalidate>
+			<p class="title">Sign Up</h1>
+			<p class="slogan">Our service is fun and awesome, but you must be 13 to join.</h2>
 
-	<form name="userForm" ng-submit="submitForm()" action="..." onsubmit="return checkForm(this);" novalidate>
-		<p class="title">Sign Up</h1>
-		<p class="slogan">Our service is fun and awesome, but you must be 13 to join.</h2>
-		<!--EMAIL ADDRESS VALIDATION-->
-		<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine || userForm.email.$touched}" >
-			<label class="email">Email</label>
-			<input type="email" id="emailField" name="email" placeholder="Email..." class="form-control" ng-model="user.email" required>
+			<!--EMAIL ADDRESS VALIDATION-->
+			<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine || userForm.email.$touched}" >
+				<label class="email">Email</label>
+				<input type="email" id="emailField" name="email" placeholder="Email..." class="form-control" ng-model="user.email" required>
 
-			<p ng-show="userForm.email.$error.email && !userForm.email.$pristine"  class="help-block errorEmail">Enter a valid email.</p>
-			<p ng-show="userForm.email.$error.required && userForm.email.$touched"  class="help-block enterEmail">We need to know your email!</p>
+				<p ng-show="userForm.email.$error.email && !userForm.email.$pristine"  class="help-block errorEmail">Enter a valid email.</p>
+				<p ng-show="userForm.email.$error.required && userForm.email.$touched"  class="help-block enterEmail">We need to know your email!</p>
+			</div>
 
-		</div>
+			<!--INPUT FOR FIRST NAME -->
+			<label for="firstName">First Name:</label>
+			<input type="text" ng-model="firstName" class="form-control" name="firstName" placeholder="First Name...">
+			<br>
 
-		<label for="firstName">First Name:</label>
-		<input type="text" ng-model="firstName" class="form-control" name="firstName" placeholder="First Name...">
-		<br>
+			<!--LAST NAME VALIDATION -->
+			<div class="form-group" ng-class="{'has-error':userForm.lastName.$invalid && userForm.lastName.$touched}">
+				<label for="lastName">Last Name:</label>
+				<input type="text" ng-model="lastName" id="lastName" class="form-control lastName" name="lastName" placeholder="Last Name..." required>
+		        <p ng-show="userForm.lastName.$error.required && userForm.lastName.$touched" class="help-block errorLN">We need to know your last name!</p>
+	         </div>
 
-		<!--LAST NAME VALIDATION -->
-		<div class="form-group" ng-class="{'has-error':userForm.lastName.$invalid && userForm.lastName.$touched}">
-		<label for="lastName">Last Name:</label>
-		<input type="text" ng-model="lastName" id="lastName" class="form-control lastName" name="lastName" placeholder="Last Name..." required>
-        <!-- <p class="error errorLN" id="name-error"ng-show="userForm.lastName.$invalid && userForm.lastName.$touched" class="help-block">We need to know your last name!</p> -->
-        <p ng-show="userForm.lastName.$error.required && userForm.lastName.$touched" class="help-block errorLN">We need to know your last name!</p>
-         </div>
+	        <!--BIRTHDAY VALIDATION -->
+	        <div class="form-group" ng-class="{'has-error': userForm.birthday.$invalid && userForm.birthday.$touched}">
+				<label for="birthday">Birthday:</label>
+				<input type="text" class="form-control" ng-model="birthday" name="birthday" placeholder="Birthday...(MM-DD-YYYY)" id="birthday" ng-keyup="checkBirth()" required>
+		        <p ng-show="userForm.birthday.$error.required && userForm.birthday.$touched" class="help-block enterBirth">Birthday is required.</p>
+		        <p ng-show="userForm.birthday.$error.tooyoung" class="help-block validAge">Sorry, you must be at least 13 to sign up!</p>
+	        </div>
 
-        
-        <div class="form-group" ng-class="{'has-error': userForm.birthday.$invalid && userForm.birthday.$touched}">
-		<label for="birthday">Birthday:</label>
-		<input type="text" class="form-control" ng-model="birthday" name="birthday" placeholder="Birthday...(MM-DD-YYYY)" id="birthday" ng-keyup="checkBirth()" required>
-		<!-- <span id="validAge" class="validAge"></span> -->
-        <!-- <p class="error" ng-show="userForm.birthday.$invalid && userForm.birthday.$touched" class="help-block">Birthday is required.</p> -->
-        <p ng-show="userForm.birthday.$error.required && userForm.birthday.$touched" class="help-block enterBirth">Birthday is required.</p>
-        <p ng-show="userForm.birthday.$error.tooyoung" class="help-block validAge">Sorry, you must be at least 13 to sign up!</p>
-        </div>
+			<!--PASSWORD VALIDATION-->
+			<div class="form-group" ng-class="{'has-error' :userForm.password.$invalid && userForm.password.$touched}">
+				<label for="password">Password:</label>
+				<input type="password" name="password" placeholder="Password..." class="form-control" ng-model="user.password" id="password" required>
+				<p ng-show="userForm.password.$invalid && userForm.password.$touched" class="help-block enterPassword">Password is required.</p>
+			</div>
 
-		<!--PASSWORD VALIDATION-->
-		<div class="form-group" ng-class="{'has-error' :userForm.password.$invalid && userForm.password.$touched}">
-			<label for="password">Password:</label>
-			<input type="password" name="password" placeholder="Password..." class="form-control" ng-model="user.password" id="password" required>
-			<p ng-show="userForm.password.$invalid && userForm.password.$touched" class="help-block enterPassword">Password is required.</p>
-
-
-		</div>
-		<div class="form-group" ng-class="{'has-error' :userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched}">
-			<label for="confirmPassword">Confirm Password:</label>
-			<input type="password" name="confirmPassword" placeholder="Confirm Password..." class="form-control" ng-model="user.confirmPassword" id="confirmPassword" ng-change="checkPass()" required>
+			<!--CONFIRM PASSWORD VALIDATION -->
+			<div class="form-group" ng-class="{'has-error' :userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched}">
+				<label for="confirmPassword">Confirm Password:</label>
+				<input type="password" name="confirmPassword" placeholder="Confirm Password..." class="form-control" ng-model="user.confirmPassword" id="confirmPassword" ng-change="checkPass()" required>
 
 
-			<p ng-show="showPasswordsDoNotMatch" class="help-block passwordMatch">Passwords do not match.</p>
-			<p ng-show="userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched" class="help-block enterConfirmPassword">Password is required.</p>
+				<p ng-show="showPasswordsDoNotMatch" class="help-block passwordMatch">Passwords do not match.</p>
+				<p ng-show="userForm.confirmPassword.$invalid && userForm.confirmPassword.$touched" class="help-block enterConfirmPassword">Password is required.</p>
 
-		</div>
+			</div>
 
-
+			<!--Sign up and reset buttons -->
 			<button class="myButton" type="submit" name="submit" ng-disabled="userForm.$invalid && userForm.confirmPassword.$invalid"
 					ng-model="submitFormButton" ng-click="submitForm()">Sign me up</button>
 
 			<button class="myButton" type="reset" name="reset" ng-model="resetFormButton" ng-click="resetForm()">Reset</button>
-</form>
-</body>
+		</form>
+	</body>
+</html>
 
 
