--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="formSubmission">
 	<head>
-		<title>Our cool website</title>
+		<title>Sign up for our Service</title>
 	</head>
 
 	<!-- bootstrap -->
@@ -13,9 +13,11 @@
 	<script src="js/moment.js"></script>
 	<script src="js/app.js"></script>
 
+	<p ng-show="submitted" class="alert alert-success">Thank you for your submission!</p>
+
 	<body ng-controller="formCtrl">
 
-		<form name="userForm" ng-submit="submitForm()" action="..." onsubmit="return checkForm(this);" novalidate>
+		<form name="userForm" ng-submit="submitForm()" onsubmit="return checkForm(this);" novalidate>
 			<p class="title">Sign Up</h1>
 			<p class="slogan">Our service is fun and awesome, but you must be 13 to join.</h2>
 
@@ -67,7 +69,7 @@
 			</div>
 
 			<!--Sign up and reset buttons -->
-			<button class="myButton" type="submit" name="submit" ng-disabled="userForm.$invalid && userForm.confirmPassword.$invalid"
+			<button class="myButton" type="submit" name="submit" ng-disabled="userForm.$invalid
 					ng-model="submitFormButton" ng-click="submitForm()">Sign me up</button>
 
 			<button class="myButton" type="reset" name="reset" ng-model="resetFormButton" ng-click="resetForm()">Reset</button>
