--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<p class="slogan">Our service is fun and awesome, but you must be 13 to join.</h2>
 
 			<!--EMAIL ADDRESS VALIDATION-->
-			<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine || userForm.email.$touched}" >
+			<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && (!userForm.email.$pristine || userForm.email.$touched)}" >
 				<label class="email">Email</label>
 				<input type="email" id="emailField" name="email" placeholder="Email..." class="form-control" ng-model="user.email" required>
 
@@ -69,7 +69,7 @@
 			</div>
 
 			<!--Sign up and reset buttons -->
-			<button class="myButton" type="submit" name="submit" ng-disabled="userForm.$invalid
+			<button class="myButton" type="submit" name="submit" ng-disabled="userForm.$invalid || showPasswordsDoNotMatch"
 					ng-model="submitFormButton" ng-click="submitForm()">Sign me up</button>
 
 			<button class="myButton" type="reset" name="reset" ng-model="resetFormButton" ng-click="resetForm()">Reset</button>
