minor bug fixes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<body ng-controller="formCtrl">
 
-		<form name="userForm" ng-submit="submitForm()" onsubmit="return checkForm(this);" novalidate>
+		<form name="userForm" ng-submit="submitForm()" novalidate>
 		    <p class="title">Sign Up</h1>
 
 		    <p class="slogan">Our service is fun and awesome, but you must be 13 to join.</h2>
